[flake8]
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,build,dist,upload.py,src,docs,__init__.py
ignore=E126,E402,E128,E722
max-line-length=90
max-complexity=10

[check-manifest]
ignore =
    .travis.yml
    .coveralls.yml
    *.pyc
    *.swp
    Vagrantfile
    .vault_password.txt
    app_config.yml
    credentials.json
    test.py

[metadata]
description-file = README.md
